lang/cpp/src/gpgsetownertrusteditinteractor.cpp
@@ -98,10 +98,6 @@ unsigned int GpgSetOwnerTrustEditInteractor::nextState(unsigned int status, cons
     static const Error GENERAL_ERROR = Error::fromCode(GPG_ERR_GENERAL);
     //static const Error INV_TIME_ERROR = Error::fromCode( GPG_ERR_INV_TIME );
 
-    if (needsNoResponse(status)) {
-        return state();
-    }
-
     using namespace GpgSetOwnerTrustEditInteractor_Private;
 
     switch (state()) {
